restructure BeamRenderer and related classes